# llm-IMDb-Movie-Finder-chat-bot

./: .gitignore
LLM-IMDB/: README.md  pyproject.toml
LLM-IMDB/backend/: chat_chain.py  imdb_loader.py  main.py  query_processor.py  requirements.txt  vector_store.py
LLM-IMDB/backend/chroma_db/b48290f1-af63-42b3-8e18-b50882cf8e27/: index_metadata.pickle
LLM-IMDB/imdb-frontend/: package-lock.json  package.json  postcss.config.js
LLM-IMDB/imdb-frontend/public/: index.html
LLM-IMDB/imdb-frontend/src/: App.css  App.js
